# iscsi-client-rs

./: .cliff.toml  .gitignore  CHANGELOG.md  CLA-ENTITY.md  CLA-INDIVIDUAL.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE.txt  NOTICE  README-LICENSING.md  README.md  deny.toml  docker-compose.yml  rustfmt.toml  tmp_enum.txt
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: dependabot-automerge.yml  rust.yml
ci-artifacts/: integration-build.json
ci/freebsd/: meta-data  start-qemu.sh  stop-qemu.sh  user-data
ci/lio/: config.yaml  config_chap.yaml  config_crc.yaml  meta-data  start-qemu.sh  stop-qemu.sh  user-data
ci/truenas/: README.md  bootstrap_truenas.py  install_truenas.py  probe_ws.py  start-qemu.sh  stop-qemu.sh  ws_client.py
docker/: Dockerfile  build.rs  entrypoint.sh
docker/lio/: Dockerfile  config.lio.yaml  entrypoint.sh
docker/tgt/: Dockerfile  config.tgt.yaml  entrypoint.sh
docs/: asc_ascq.tsv
just/: cleanup.just  docker.just  mapper.just  release.just  tests.just  util.just  vars.just
legal/: COPYRIGHT
src/: internal_tests.rs  lib.rs  main.rs  utils.rs
src/cfg/: cli.rs  config.rs  enums.rs  logger.rs  mod.rs
src/client/: client.rs  client_faults_tests.rs  common.rs  mod.rs  pdu_connection.rs  pending_requests.rs  pool_sessions.rs
src/client/client/: read.rs  write.rs
src/control_block/: common.rs  inquiry.rs  mod.rs  mod_sense.rs  read.rs  read_capacity.rs  report_luns.rs  request_sense.rs  test_unit_ready.rs  write.rs  xdwrite_read.rs
src/handlers/: login_chap.rs  login_simple.rs  mod.rs  nop.rs  nop_handler.rs  simple_scsi_command.rs  text_request.rs
src/login/: common.rs  request.rs  response.rs  status.rs
src/models/: common.rs  data_fromat.rs  identifiers.rs  mod.rs  opcode.rs  parse.rs
src/models/command/: common.rs  mod.rs  request.rs  response.rs  zero_copy.rs
src/models/data/: asc_ascq_gen.rs  common.rs  mod.rs  request.rs  response.rs  sense_data.rs
src/models/login/: common.rs  mod.rs  request.rs  response.rs  status.rs
src/models/logout/: common.rs  mod.rs  request.rs  response.rs
src/models/nop/: common.rs  mod.rs  request.rs  request_response.rs  response.rs
src/models/ready_2_transfer/: mod.rs  response.rs
src/models/reject/: mod.rs  reject.rs  reject_description.rs  response.rs
src/models/text/: common.rs  mod.rs  request.rs  response.rs
src/state_machine/: common.rs  discovery.rs  login.rs  login_states.rs  logout_states.rs  mod.rs  nop_states.rs  read_states.rs  tur_states.rs  write_states.rs
src/state_machine/login/: common.rs  login_chap.rs  login_plain.rs  mod.rs
tests/: _integration_entry.rs  _unit_entry.rs  config.yaml  config_chap.yaml  config_crc.yaml  config_logger.yaml  test_login.rs  test_nop.rs  test_read.rs  test_reject.rs  test_text.rs  test_write.rs
tests/configs/freebsd/: plain.yaml
tests/configs/lio/: chap.yaml  crc.yaml  discovery.yaml  plain.yaml
tests/configs/tgt/: chap.yaml  crc.yaml  discovery.yaml  plain.yaml
tests/configs/truenas/: plain.yaml
tests/fixtures/: login_minimal.hex  login_request.hex  login_response.hex  nop_in_response_crc.hex  nop_out_request.hex  nop_out_request_ping.hex  read_request.hex  read_response_good.hex  reject_example.hex  text_response.hex  write10_request.hex  write10_response.hex  write_request.hex
tests/fixtures/login/: login_response.hex  step2_req.hex  step4_resp.hex
tests/integration_tests/: ahs_bidi_r2t.rs  check_tur.rs  client_faults.rs  common.rs  concurrent_io.rs  get_capacity_read_write.rs  inquiry.rs  io_boundaries.rs  iscsi_mapper.rs  login_chap_ok.rs  login_negative.rs  login_plain_ok.rs  logout_ok.rs  mod_sense.rs  nop_reply.rs  read10_write_read10.rs  read_sense.rs  read_write_read.rs  recovery.rs  report_luns.rs  send_targets_discovery.rs  test_unit_ready.rs  write_1gb.rs
tests/unit_tests/: config_logger.yaml  test_ahs.rs  test_config.rs  test_discovery.rs  test_login.rs  test_nop.rs  test_read.rs  test_read_capacity.rs  test_ready_to_transfer.rs  test_reject.rs  test_text.rs  test_write.rs
tests/unit_tests/fixtures/login/: login_request.hex  step1_req.hex  step1_resp.hex  (+6 more)
(+11 files in other folders)
