[package]
name = "iscsi-client-rs"
version = "0.0.1"
edition = "2024"
description = "A pure-Rust iSCSI initiator library and CLI"
license = "MIT"
repository = "https://github.com/Masorubka1/iscsI-client-rs.git"
homepage = "https://github.com/Masorubka1/iscsI-client-rs.git"
documentation = "https://docs.rs/iscsi-client-rs"
keywords = ["iscsi", "storage", "async", "tokio"]

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
uuid = { version = "1", features = ["v4"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
crc32c = "0.6.8"
anyhow = "1.0.98"
thiserror = "2.0.12"
hex-literal = "1.0.0"
hex = "0.4.3"
bitflags = "2.9.1"
md-5 = "0.10.0"
hmac = "0.12.1"
serde_yaml = "0.9.34"
crc = "3.3.0"
rand = "0.9.2"
binrw = "0.15.0"
serde_json = "1.0.141"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "env-filter",
    "fmt",
    "json",
    "local-time",
    "valuable",
] }
tracing-appender = "0.2.3"
chrono = "0.4.41"
enum_dispatch = "0.3.13"
dashmap = "6.1.0"


[workspace]
members = ["."]

[lints]
workspace = true

[workspace.lints.clippy]
perf = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }

unwrap_used = "deny"
redundant_clone = "deny"
unnecessary_to_owned = "deny"
large_enum_variant = "deny"
