[package]
name = "iscsi-client-rs"
version = "0.0.7"
authors = ["Andrei Maltsev"]
edition = "2024"
description = "A pure-Rust iSCSI initiator library and CLI"
license = "AGPL-3.0-or-later"
repository = "https://github.com/Masorubka1/iscsI-client-rs.git"
homepage = "https://github.com/Masorubka1/iscsI-client-rs.git"
documentation = "https://docs.rs/iscsi-client-rs"
keywords = ["iscsi", "initiator", "client", "storage", "async"]

#[[bin]]
#name = "iscsi_mapper"
#path = "tests/integration_tests/iscsi_mapper.rs"

[[bin]]
name = "asc_ascq"
path = "docker/build.rs"

[[test]]
name = "unit"
path = "tests/_unit_entry.rs"
harness = true

[[test]]
name = "integration"
path = "tests/_integration_entry.rs"
harness = true

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive", "serde_derive"] }
crc32c = "0.6.8"
anyhow = "1.0.98"
thiserror = "2.0.12"
hex-literal = "1.0.0"
hex = "0.4.3"
bitflags = "2.9.1"
md-5 = "0.10.0"
serde_yaml = "0.9.34"
crc = "3.3.0"
rand = "0.9.2"
serde_json = "1.0.141"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "chrono",
    "env-filter",
    "fmt",
    "json",
    "local-time",
    "valuable",
] }
tracing-appender = "0.2.3"
fastrace = { version = "0.7", features = ["enable"] }
fastrace-tracing = "0.1"
chrono = "0.4.41"
enum_dispatch = "0.3.13"
dashmap = "6.1.0"
once_cell = "1.21.3"
zerocopy = { version = "0.8.26", features = ["derive"] }
serial_test = "3.2.0"
tokio-util = "0.7.16"
bytes = "1.10.1"


[workspace]
members = ["."]

[lints]
workspace = true

[workspace.lints.clippy]
perf = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
style = { level = "deny", priority = -1 }

unwrap_used = "deny"
redundant_clone = "deny"
unnecessary_to_owned = "deny"
large_enum_variant = "deny"
